# pyskoob

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  advanced_usage.html  author_service.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  stable_api.html
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  delete-codex-branches.yml  docs.yml  lint.yml  (+2 more)
advanced_usage/: index.html
author_service/: index.html
books_service/: index.html
changelog/: index.html
contributing/: index.html
docs/: advanced_usage.md  author_service.md  books_service.md  changelog.md  contributing.md  index.md  profile_service.md  publishers_service.md  stable_api.md  users_service.md
examples/: auth_user_profile.py  pagination_search.py  publisher_service_example.py  search_authors.py  search_books.py
profile_service/: index.html
publishers_service/: index.html
pyskoob/: __init__.py  auth.py  authors.py  books.py  client.py  exceptions.py  profile.py  publishers.py  users.py
search/: search_index.json
stable_api/: index.html
tests/: conftest.py  test_async_auth_service.py  test_auth_service.py  test_author_models.py  test_base_skoob_service.py  test_book_helpers.py  test_bs4_utils.py  test_httpx_async_client.py  test_httpx_rate_limiter.py  test_httpx_retry.py  test_httpx_sync_client.py  test_imports.py  test_profile_service.py  test_public_api.py  test_publisher_service.py  test_rate_limiter.py  test_skoob_async_client.py  test_skoob_author_service.py  test_skoob_book_service.py  test_skoob_client.py  test_skoob_parser_utils.py  test_skoob_user_service.py  test_sync_async.py
users_service/: index.html
(+26 files in other folders)
